fix: home button no longer appears over the title on small screens

--- a/1. Basic Web Development/frontend/styles/styles.css
+++ b/1. Basic Web Development/frontend/styles/styles.css
@@ -456,4 +456,8 @@ input[type="text"] {
     #small-d-lock {
         display: inline-block;
     }
+
+    .home-btn {
+        margin: 2px;
+    }
 }
